syntax = "proto3";

package mygrpcservice.proto;

option go_package = "./proto";

message FileMetadata {
    string name = 1;
    string created = 2;
    string updated = 3;
}

message FileList {
    repeated FileMetadata files = 1; // Список файлов
}

message Empty {}

service FileService {
    rpc ListFiles(Empty) returns (FileList); // Метод для получения списка файлов
    rpc Upload(stream FileChunk) returns (UploadStatus); // Пример метода для загрузки файла
    rpc Download(FileRequest) returns (stream FileChunk); // Пример метода для скачивания файла
}

message FileChunk {
    bytes content = 1;
    int32 chunk_size = 2;
}

message FileRequest {
    string file_name = 1;
}

message UploadStatus {
    bool success = 1;
    string message = 2;
}
